--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "type": "terminus-plugin",
     "license": "MIT",
     "autoload": {
-        "psr-4": { "Pantheon\\LCMDeployCommand\\": "src" }
+        "psr-4": { "LastCall\\TerminusSafeDeploy\\": "src" }
     },
     "require-dev": {
         "phpunit/phpunit": "^9",
@@ -16,7 +16,6 @@
         "cs": "phpcs --standard=PSR2 -n src",
         "cbf": "phpcbf --standard=PSR2 -n src",
         "lint": "find src -name '*.php' -print0 | xargs -0 -n1 php -l",
-
         "test": [
             "@lint",
             "@cs"
