--- a/.github/workflows/publish-docker.yml
+++ b/.github/workflows/publish-docker.yml
@@ -13,6 +13,6 @@ jobs:
             - name: Docker Hub Login
               run: docker login -u ${{secrets.DOCKER_HUB_USERNAME}} -p ${{secrets.DOCKER_HUB_TOKEN}}
             - name: Build Image
-              run: docker build -t lastcallmedia/terminus-safe-deploy:${{ github.ref_name }} --build-arg plugin_tag={{github.ref_name}} .
+              run: docker build -t lastcallmedia/terminus-safe-deploy:${{ github.ref_name }} --build-arg plugin_tag=${{ github.ref_name }} .
             - name: Push Image
               run: docker push lastcallmedia/terminus-safe-deploy:${{ github.ref_name }}
