reference dev-main for latest builds on dockerub

--- a/.github/workflows/publish-docker.yml
+++ b/.github/workflows/publish-docker.yml
@@ -7,6 +7,7 @@ on:
             - 'main'
 env:
     DOCKER_HUB_TAG: ${{ github.ref_name == 'main' && 'latest' || github.ref_name }}
+    PACKAGIST_TAG: ${{ github.ref_name == 'main' && 'dev-main' || github.ref_name }}
 jobs:
     publish:
         runs-on: ubuntu-latest
@@ -16,6 +17,6 @@ jobs:
             - name: Docker Hub Login
               run: docker login -u ${{secrets.DOCKER_HUB_USERNAME}} -p ${{secrets.DOCKER_HUB_TOKEN}}
             - name: Build Image
-              run: docker build -t lastcallmedia/terminus-safe-deploy:${{ env.DOCKER_HUB_TAG }} --build-arg plugin_tag=${{ github.ref_name }} .
+              run: docker build -t lastcallmedia/terminus-safe-deploy:${{ env.DOCKER_HUB_TAG }} --build-arg plugin_tag=${{ env.PACKAGIST_TAG }} .
             - name: Push Image
               run: docker push lastcallmedia/terminus-safe-deploy:${{ env.DOCKER_HUB_TAG }}
